Finished the desktop version, currently working on the mobile version

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <script src="./script.js"></script>
     <!-- displays site properly based on user's device -->
 
     <link
@@ -34,7 +35,7 @@
         <div>
           <div class="form-component">
             <p class="grid__banner">Try it free 7 days then $20/mo. thereafter</p>
-            <form name="myForm" class="form-container" action="#" onsubmit="validateForm()" method="post" required>
+            <form name="myForm" class="form-container" action="/" onsubmit="validateForm()" method="post" required>
               <input name="fname" type="text" />
               <input type="text" />
               <input type="email" />
