--- a/index.html
+++ b/index.html
@@ -34,15 +34,15 @@
         </div>
         <div>
           <div class="form-component">
-            <p class="grid__banner">Try it free 7 days then $20/mo. thereafter</p>
-            <form name="myForm" class="form-container" action="/" onsubmit="validateForm()" method="post" required>
-              <input name="fname" type="text" />
-              <input type="text" />
-              <input type="email" />
-              <input type="password" />
+            <p class="grid__banner">Try it free 7 days <span>then $20/mo. thereafter</span></p>
+            <form name="myForm" class="form-container" action="index.html" onsubmit="validateForm()" method="post" required>
+              <input name="fname" type="text" placeholder="First Name"/>
+              <input type="text" placeholder="Last Name"/>
+              <input type="email" placeholder="Email Address"/>
+              <input type="password" placeholder="Password"/>
               <button class="grid__button" type="submit">Claim your free trial</button>
               <p class="grid__terms">
-                By clicking the button, you are agreeing to our Terms and Services
+                By clicking the button, you are agreeing to our <span class="bold">Terms and Services</span>
               </p>
             </form>
           </div>
