--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
     <script src="./script.js"></script>
     <!-- displays site properly based on user's device -->
 
@@ -15,7 +18,7 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./css/style.css" />
 
     <title>Frontend Mentor | Intro component with sign up form</title>
 
@@ -28,26 +31,49 @@
           <h1 class="title">Learn to code by watching others</h1>
           <p class="description">
             See how experienced developers solve problems in real-time. Watching
-            scripted tutorials is great, but understanding how developers think is
-            invaluable
+            scripted tutorials is great, but understanding how developers think
+            is invaluable
           </p>
         </div>
         <div>
           <div class="form-component">
-            <p class="grid__banner">Try it free 7 days <span>then $20/mo. thereafter</span></p>
-            <form name="myForm" class="form-container" action="index.html" onsubmit="validateForm()" method="post" required>
-              <input name="fname" type="text" placeholder="First Name"/>
-              <input type="text" placeholder="Last Name"/>
-              <input type="email" placeholder="Email Address"/>
-              <input type="password" placeholder="Password"/>
-              <button class="grid__button" type="submit">Claim your free trial</button>
+            <p class="grid__banner">
+              Try it free 7 days <span>then $20/mo. thereafter</span>
+            </p>
+            <form
+              name="myForm"
+              class="form-container"
+              action="index.html"
+              onsubmit="validateForm()"
+              method="post"
+              required
+            >
+              <div class="fields">
+                <input name="fname" type="text" placeholder="First Name" />
+                <div class="error">
+                  <img
+                    src="images/icon-error.svg"
+                    class="error-img"
+                    alt="error-image"
+                  />
+                  <p class="error-msg">The first name field cannot be empty</p>
+                </div>
+                <input type="text" placeholder="Last Name" />
+                <input type="email" placeholder="Email Address" />
+                <input type="password" placeholder="Password" />
+              </div>
+              <button onlick="" class="grid__button" type="submit">
+                Claim your free trial
+              </button>
               <p class="grid__terms">
-                By clicking the button, you are agreeing to our <span class="bold">Terms and Services</span>
+                By clicking the button, you are agreeing to our
+                <span class="bold">Terms and Services</span>
               </p>
             </form>
           </div>
         </div>
       </div>
     </main>
+    <script src="./js/script.js"></script>
   </body>
 </html>
